# DeMoD-Communication-Framework

./: DCF-README.markdown  README.markdown  README.md  briefing.markdown  briefing.txt  dcf_design_spec.markdown  export_compliance.markdown  readme.markdown
C_SDK/: C-SDKreadme.markdown  CMakeLists.txt  DCF-C-SDK-Compilation-Guide.markdown  Dockerfile
C_SDK/examples/: p2p.c
C_SDK/include/dcf-sdk/: dcf_client.h  dcf_error.h  dcf_plugin_manager.h  dcf_redundancy.h
C_SDK/include/dcf_sdk/: config.h  dcf_client.h  dcf_error.h  dcf_interface.h  dcf_networking.h  dcf_plugin_manager.h  dcf_redundancy.h  dcf_serialization.h
C_SDK/plugins/: custom_transport.c
C_SDK/proto/: messages.pb-c.c  messages.pb-c.h
C_SDK/src/dcf_sdk/: config.c  dcf_cli.c  dcf_client.c  dcf_error.c  dcf_interface.c  dcf_networking.c  dcf_plugin_manager.c  dcf_redundancy.c  dcf_serialization.c  grpc_wrapper.cpp
C_SDK/tests/: test_plugin.c  test_redundancy.c
JS/nodejs/src/: dcf.js
cpp/include/dcf/: dcf_client.h
go/src/: dcf.go
haskell/examples/: P2P.hs
java/: build.gradle
java/com/demod/dcf/: Networking.java
kotlin/src/main/kotlin/dcf/: Networking.kt
nix/: flake.nix
perl/lib/DCF/: networking.pm
python/: setup.py
python/dcf/: client.py  config.py
rust/src/: netwroking.rs
swift/: package.swift
